--- a/mongo/docker-compose.yaml
+++ b/mongo/docker-compose.yaml
@@ -9,8 +9,8 @@ services:
     volumes:  
       - ./mongo-data:/data/db  
     environment:  
-      - MONGO_INITDB_ROOT_USERNAME=admin  
-      - MONGO_INITDB_ROOT_PASSWORD=admin  
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
     restart: always  
 
 volumes:  
