--- a/vault/docker-compose.yml
+++ b/vault/docker-compose.yml
@@ -9,8 +9,8 @@ services:
       - "8201:8201"
     environment:
       - VAULT_DEV_LISTEN_ADDRESS=0.0.0.0:8200
-      - VAULT_DEV_ROOT_TOKEN_ID=myroottoken
-      - VAULT_TOKEN=myroottoken
+      - VAULT_DEV_ROOT_TOKEN_ID=root
+      - VAULT_TOKEN=root
       - VAULT_ADDR=http://0.0.0.0:8200
     cap_add:
       - IPC_LOCK
@@ -18,7 +18,7 @@ services:
     restart: always
     volumes:
       - vault_data:/vault/data
-    entrypoint: /bin/sh -c "vault server -dev -dev-listen-address=0.0.0.0:8200 -dev-root-token-id=myroottoken"
+    entrypoint: /bin/sh -c "vault server -dev -dev-listen-address=0.0.0.0:8200 -dev-root-token-id=root"
     healthcheck:
       test: ["CMD", "curl", "-s", "--fail", "http://0.0.0.0:8200/v1/sys/health"]
       interval: 5s
